# resume-ranker-rag-local

./: .gitignore  README.md  pyproject.toml
src/: create_test_data.py  main.py
src/api/: routes.py  schemas.py
src/core/: config.py  logger.py
src/modules/: analysis.py  ingestion.py  rag.py  vision.py
